--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <!-- Buttons -->
   <section class="button-container">
-    <button class="batch-btn" onclick="location.href='Police-Batches/batches.html'">🚔 Police Preparation</button>
+    <button class="batch-btn" onclick="location.href='Police-Batches/Batches.html'">🚔 Police Preparation</button>
     <button class="batch-btn" onclick="location.href='Placementprep/Placementprep.html'">💼 Placement Preparation</button>
     <button class="batch-btn" onclick="location.href='Mba/Mba.html'">💼 Mba</button>
     <button class="batch-btn" onclick="location.href=''">📚 Other Batches</button>
