--- a/Mba/Mba.html
+++ b/Mba/Mba.html
@@ -30,7 +30,7 @@
   <section class="button-container">
     
     <button class="batch-btn">📊 Aptitude</button>
-    <button class="batch-btn">🗣 Communication</button>
+    <button class="batch-btn" onclick="location.href='communication.html'" >🗣 Communication</button>
     <button class="batch-btn">👨‍💻Miscell...</button>
   </section>
 
