--- a/Placementprep/Placementprep.html
+++ b/Placementprep/Placementprep.html
@@ -29,9 +29,9 @@
   <!-- Content Section -->
   <section class="button-container">
     <button class="batch-btn" onclick="location.href='coding.html'">👨‍💻 Coding</button>
-    <button class="batch-btn">👨‍💻 Web Development</button>
+    <button class="batch-btn" onclick="location.href='WebD.html'">👨‍💻 Web Development</button>
     <button class="batch-btn">📊 Aptitude</button>
-    <button class="batch-btn">🗣 Communication</button>
+    <button class="batch-btn" onclick="location.href='communication.html'">🗣 Communication</button>
   </section>
 
   <!-- Footer -->
