--- a/Placementprep/coding.html
+++ b/Placementprep/coding.html
@@ -59,7 +59,7 @@
       </div>
   
       <!-- DSA -->
-      <div class="subject-card" onclick="location.href='https://www.youtube.com/playlist?list=PLfqMhTWNBTe137I_EPQd34TsgV6IO55pt'">
+      <div class="subject-card" onclick="location.href='dsacpp.html'">
         <img src="https://i.ytimg.com/vi/VTLCoHnyACE/hqdefault.jpg" alt="Complete C++ DSA">
         <p>Complete C++ DSA</p>
       </div>
