--- a/Placementprep/coding.html
+++ b/Placementprep/coding.html
@@ -53,7 +53,7 @@
       
   
       <!-- OOPS -->
-      <div class="subject-card" onclick="location.href='https://www.youtube.com/watch?v=mlIUKyZIUUU'">
+      <div class="subject-card" onclick="location.href='oops.html'">
         <img src="https://i.ytimg.com/vi/mlIUKyZIUUU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDeYOHnyCL7pDIOslbcp7yXXCiktA" alt="OOPS by Shraddha Khapra">
         <p>OOPS by Shraddha Khapra</p>
       </div>
