--- a/Placementprep/WebD.html
+++ b/Placementprep/WebD.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="../cropped_icon_image.png">
+
     <script defer src="../script.js"></script>
     <link rel="stylesheet" href="../Police-Batches/Vinayak.css">
   <meta charset="UTF-8">
@@ -30,7 +32,7 @@
 <body>
     <!-- Navbar -->
   <nav class="navbar">
-    <a href="../index.html"><h2>Study Portal</h2></a>
+    <a href="../index.html"><img src="../cropped_icon_image.png" width="50px" height="40px"></a>
     <div class="nav-links">
       <a href="../index.html">Home</a>
       <a href="https://rohan-dev-portfolio-pink.vercel.app/" target="_blank">About</a>
@@ -65,6 +67,14 @@
         <img src="https://i.ytimg.com/vi/Vi9bxu-M-ag/hqdefault.jpg?sqp=-oaymwEXCNACELwBSFryq4qpAwkIARUAAIhCGAE=&rs=AOn4CLAuRKGTBkNUOEglcihlb91LN6XYOQ" alt="Complete Html">
         <p>Full Stack Development Using MERN stack</p>
         <p>Love Babbar</p>
+      </div>
+      <!--java script-->
+      <div class="subject-card" onclick="location.href='https://www.youtube.com/watch?v=e2fKYP_7B_Y'">
+        <img src="https://i.ytimg.com/vi/e2fKYP_7B_Y/hqdefault.jpg?sqp=-oaymwEXCNACELwBSFryq4qpAwkIARUAAIhCGAE=&rs=AOn4CLAuRKGTBkNUOEglcihlb91LN6XYOQ" alt="Complete Html">
+        <p>
+          JavaScript for Beginners | Learn JavaScript in one hour!</p>
+        <p>
+          Keerti Purswani</p>
       </div>
      
   
