--- a/Placementprep/coding.html
+++ b/Placementprep/coding.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="../cropped_icon_image.png">
+
     <script defer src="../script.js"></script>
     <link rel="stylesheet" href="../Police-Batches/Vinayak.css">
   <meta charset="UTF-8">
@@ -30,7 +32,7 @@
 <body>
     <!-- Navbar -->
   <nav class="navbar">
-    <a href="../index.html"><h2>Study Portal</h2></a>
+    <a href="../index.html"><img src="../cropped_icon_image.png" width="50px" height="40px"></a>
     <div class="nav-links">
       <a href="../index.html">Home</a>
       <a href="https://rohan-dev-portfolio-pink.vercel.app/" target="_blank">About</a>
@@ -66,7 +68,7 @@
   
       <!-- Notes -->
       <div class="subject-card" onclick="location.href='https://drive.google.com/drive/folders/1wfNTKinBAV6CCxaI5lfSnnRFAYpy0uEl'">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQPN3EXan7dPuXfVnt5xJMhxGfrXbF-RewbLQ&s" alt="Notes">
+        <img src="https://cdn.dribbble.com/userupload/43028502/file/original-098752ee72cba73b7a7b18d9ee0d0515.jpg?resize=400x0" alt="Notes">
         <p>Notes By Shraddha Khapra</p>
       </div>
     </div>
