--- a/Placementprep/communication.html
+++ b/Placementprep/communication.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="../cropped_icon_image.png">
+
     <script defer src="../script.js"></script>
     <link rel="stylesheet" href="../Police-Batches/Vinayak.css">
   <meta charset="UTF-8">
@@ -30,7 +32,7 @@
 <body>
     <!-- Navbar -->
   <nav class="navbar">
-    <a href="../index.html"><h2>Study Portal</h2></a>
+    <a href="../index.html"><img src="../cropped_icon_image.png" width="50px" height="40px"></a>
     <div class="nav-links">
       <a href="../index.html">Home</a>
       <a href="https://rohan-dev-portfolio-pink.vercel.app/" target="_blank">About</a>
@@ -58,7 +60,7 @@
   
   
       
-        <div class="subject-card" onclick="location.href='https://www.youtube.com/playlist?list=PLMufDeLh5x2CRcF2097zGzvKfA63pFOts'" style="cursor:pointer;">
+        <div class="subject-card" onclick="location.href='kgverbal.html'" style="cursor:pointer;">
           <img src="https://i.ytimg.com/vi/k90CF3IrfeY/hqdefault.jpg?sqp=-oaymwEXCNACELwBSFryq4qpAwkIARUAAIhCGAE=&rs=AOn4CLCil32Pt6BsGpv_1dOFeWv8TzPilA" alt="SQL By Shraddha Khapra">
           <p>Complete Verbal Ability for Placement Preparation</p>
           <p>By Knowledge Gate</p>
