--- a/Placementprep/dsacpp.html
+++ b/Placementprep/dsacpp.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="../cropped_icon_image.png">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Placement Prep | Study Portal</title>
@@ -12,7 +14,7 @@
 <body>
   <!-- Navbar -->
   <nav class="navbar">
-    <a href="../index.html"><h2>Study Portal</h2></a>
+    <a href="../index.html"><img src="../cropped_icon_image.png" width="50px" height="40px"></a>
     <div class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../Police-Batches/Police batches.html">Police</a>
@@ -22,13 +24,16 @@
     </div>
   </nav>
 
-  <div class="search-container">
-    <svg class="search-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M15.5 14H14.71L14.43 13.73C15.41 12.59 16 11.11 16 9.5C16 5.91 13.09 3 9.5 3C5.91 3 3 5.91 3 9.5C3 13.09 5.91 16 9.5 16C11.11 16 12.59 15.41 13.73 14.43L14 14.71V15.5L19 20.49L20.49 19L15.5 14ZM9.5 14C7.01 14 5 11.99 5 9.5C5 7.01 7.01 5 9.5 5C11.99 5 14 7.01 14 9.5C14 11.99 11.99 14 9.5 14Z"/>
+ <div class="search-container">
+  <input id="search-input" type="text" placeholder="Search">
+  <button class="search-btn">
+    <!-- You can put an SVG or font-awesome icon here -->
+    <svg class="search-icon" viewBox="0 0 24 24">
+      <path d="M21.71 20.29l-3.388-3.388A8.958 8.958 0 0018 9a9 9 0 10-9 9 8.958 8.958 0 007.902-4.678l3.388 3.388a1 1 0 001.414-1.414zM4 9a5 5 0 1110 0A5 5 0 014 9z"></path>
     </svg>
-    
-    <input type="text" id="search-input" placeholder="Search for lectures by name or number...">
-  </div>
+  </button>
+</div>
+
 
   <!-- Hero -->
   <header class="hero">
