--- a/Police-Batches/Police batches.html
+++ b/Police-Batches/Police batches.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="../cropped_icon_image.png">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Police Batches | Study Portal</title>
@@ -10,7 +12,7 @@
 <body>
   <!-- Navbar -->
   <nav class="navbar">
-    <a href="../index.html"><h2>Study Portal</h2></a>
+    <a href="../index.html"><img src="../cropped_icon_image.png" width="50px" height="40px"></a>
     <div class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../Placementprep/Placementprep.html">Placement</a>
