--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="cropped_icon_image.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Study Portal</title>
@@ -10,7 +11,7 @@
 <body>
   <!-- Navbar -->
   <nav class="navbar">
-    <a href="index.html"><h2>Study Portal</h2></a>
+    <a href="index.html"><img src="cropped_icon_image.png" width="50px" height="40px"></a>
     <div class="nav-links">
       <a href="index.html">Home</a>
       <a href="https://rohan-dev-portfolio-pink.vercel.app/" target="_blank">About</a>
