--- a/Mba/communication.html
+++ b/Mba/communication.html
@@ -60,7 +60,7 @@
   
   
       
-        <div class="subject-card" onclick="location.href='https://www.youtube.com/playlist?list=PLMufDeLh5x2CRcF2097zGzvKfA63pFOts'" style="cursor:pointer;">
+        <div class="subject-card" onclick="location.href='../Placementprep/kgverbal.html'" style="cursor:pointer;">
           <img src="https://i.ytimg.com/vi/k90CF3IrfeY/hqdefault.jpg?sqp=-oaymwEXCNACELwBSFryq4qpAwkIARUAAIhCGAE=&rs=AOn4CLCil32Pt6BsGpv_1dOFeWv8TzPilA" alt="SQL By Shraddha Khapra">
           <p>Complete Verbal Ability for Placement Preparation</p>
           <p>By Knowledge Gate</p>
