update contact details

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <a href="index.html"><img src="cropped_icon_image.png" width="50px" height="40px"></a>
     <div class="nav-links">
       <a href="index.html">Home</a>
-      <a href="https://rohan-dev-portfolio-pink.vercel.app/" target="_blank">About</a>
-      <a href="https://rohan-dev-portfolio-pink.vercel.app/contact.html" target="_blank">Contact</a>
+      <a href="https://rohanportfolio2807.vercel.app/" target="_blank">About</a>
+      <a href="https://rohanportfolio2807.vercel.app/contact.html">Contact</a>
       <button id="theme-toggle">🌙</button>
     </div>
   </nav>
@@ -38,7 +38,8 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <p>© 2025 Study Portal | Designed by Rohan Kumar</p>
+    <p>© 2025 Study Portal | Designed by  <a href="https://rohanportfolio2807.vercel.app/" style="color: aliceblue;" target="_blank"    onmouseover="this.style.color='orange'" 
+      onmouseout="this.style.color='white'" >Rohan Kumar</a></p>
   </footer>
 
 
